Models/Synthetic/Density/log_expl
Java HotSpot(TM) 64-Bit Server VM warning: ignoring option MaxPermSize=128M; support was removed in 8.0
Java HotSpot(TM) 64-Bit Server VM warning: Max heap size too large for Compressed Oops
  ___                   __  __  ___  _     _____   _  _
 / _ \ _ __   ___ _ __ |  \/  |/ _ \| |   | ____| | || |
| | | | '_ \ / _ \ '_ \| |\/| | | | | |   |  _|   | || |_
| |_| | |_) |  __/ | | | |  | | |_| | |___| |___  |__   _|
 \___/| .__/ \___|_| |_|_|  |_|\___/|_____|_____|    |_|
      |_|
Loading ExplScalaModel.oml...
import java.text.SimpleDateFormat
import java.util.Date
import scala.sys.process._
diffusion: org.openmole.core.workflow.data.Prototype[Double] = diffusion: Double
diffusionsteps: org.openmole.core.workflow.data.Prototype[Int] = diffusionsteps: Int
alphalocalization: org.openmole.core.workflow.data.Prototype[Double] = alphalocalization: Double
growthrate: org.openmole.core.workflow.data.Prototype[Double] = growthrate: Double
population: org.openmole.core.workflow.data.Prototype[Double] = population: Double
replication: org.openmole.core.workflow.data.Prototype[Int] = replication: Int
moran: org.openmole.core.workflow.data.Prototype[Double] = moran: Double
distance: org.openmole.core.workflow.data.Prototype[Double] = distance: Double
entropy: org.openmole.core.workflow.data.Prototype[Double] = entropy: Double
slope: org.openmole.core.workflow.data.Prototype[Double] = slope: Double
rsquared: org.openmole.core.workflow.data.Prototype[Double] = rsquared: Double
mkdir: impossible de créer le répertoire «tmp»: Le fichier existe
res3: Int = 1
warning: there was one feature warning; re-run with -feature for details
task: org.openmole.plugin.task.scala.ScalaTaskBuilder{def toTask: org.openmole.plugin.task.scala.ScalaTask with this.Built} = org.openmole.plugin.task.scala.ScalaTask$$anon$2@8a607a9
<console>:165: error: value in is not a member of org.openmole.core.workflow.data.Prototype[Int]
         ) x (replication in UniformDistribution[Int]() take 10) x (diffusionsteps in (1.0 to 3.0 by 1.0))
                                                                                   ^
purpose: String = LHSsampling
h: org.openmole.plugin.hook.file.AppendToCSVFileHookBuilder = org.openmole.plugin.hook.file.AppendToCSVFileHookBuilder@5c419746
startTime: Long = 1438177516640
env: org.openmole.core.workflow.execution.local.LocalEnvironment = org.openmole.core.workflow.execution.local.LocalEnvironment@30ca87d9
<console>:153: error: not found: value exploration
       val ex = exploration -< (task on env hook h) start
                ^
<console>:139: error: not found: value ex
              ex.waitUntilEnded
              ^
Total Ellapsed Time is 1.322
